--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -14,7 +14,7 @@ body {
 .contact-container {
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px #20C997;
     max-width: 800px;
     width: 100%;
     padding: 20px;
