--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f8f9fa;
-    color: #343a40;
+    color: #94ce77;
     display: flex;
     justify-content: center;
     align-items: center;
