--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -885,3 +885,50 @@ footer {
 }
 .contact-info .fa {
   margin-right: 10px;}
+
+
+
+  .ab {
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+    max-width: 100%;
+    margin: auto;
+}
+
+.ac {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 10px;
+    flex: 1;
+    max-width: 50%;
+    text-align: center;
+    transition: transform 0.3s ease;
+}
+
+.ac:hover {
+    color: #022a00;
+    transform: translateY(-50px);
+}
+
+.ad {
+    margin-bottom: 34%;
+}
+
+.ae {
+    background-color: #2d383e21;
+    color: #fff;
+}
+
+.af {
+    background-color: #ffe4b5;
+    color: #555;
+}
+
+h3 {
+    margin-top: 50%;
+    font-size: 3.5em;
+    margin-bottom: 55%;
+} 
