--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #2c3e50;
+    background-color: #ffe4b5;
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -15,8 +15,9 @@ header {
 }
 
 h1 {
+    margin-top: -20%;
     margin: 0;
-    font-size: 2.5em;
+    font-size: 6.5em;
 }
 
 main {
