--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 
-  font-size: 265%;
+  font-size: 5.0rem;
     color: green;
     font-family: "Montserrat-Bold"; }
 
@@ -587,6 +587,7 @@ footer {
     footer .copyright p {
       color: #999999; } */
       footer {
+        margin-top: 2%;
         background-image: url(../images/bbb1.png);
         background-size: cover;  /* Assure que l'image couvre toute la section */
         background-position: center;  /* Centre l'image dans la section */
@@ -597,6 +598,7 @@ footer {
     
     /* Style pour le logo dans le footer */
     footer h2.logo {
+      margin-left: 0%;
         font-size: 125px;
         font-family: "revenue";
         color: #f5f5dc;
@@ -1023,7 +1025,7 @@ h3 {
 }
 
 /* Cadre avec background-image */
-.ae, .af {
+.ae, .af,.aj {
   background-size: cover; /* Pour couvrir tout l'espace du cadre */
   background-position: center; /* Pour centrer l'image */
   color: #fff;
@@ -1041,18 +1043,22 @@ h3 {
   background-image: url('../images/sss2.png');
   color: #555;
 }
+.aj{
+   background-image: url('../images/diag.png');
+  color: #555;}
 
 /* Texte dans les cadres */
 h3 {
-  font-size: 3.5em;
-  position: absolute; /* Position absolue pour placer le texte au centre */
-  top: 50%;
+  width: 80%;
+  font-size: 2.3em;
+  position: absolute;
+  top: 86%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Centrage du texte */
-  margin: 0; /* Supprime les marges */
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.7); /* Fond transparent pour améliorer la lisibilité */
-  border-radius: 10px; /* Coins arrondis */
+  transform: translate(-50%, -50%);
+  margin: 0px;
+  padding: 28px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 10px;
 }
 
 
@@ -1094,13 +1100,14 @@ h3 {
 .main-content {
   flex: 2;
   /* Occupe 2 unités de l'espace disponible, plus large que la colonne de gauche */
-  padding-left: 1%;
+  padding-left: 2%;
   /* Espacement à gauche du contenu principal */
 }
 
 .main-content p {
-  font-size: 23px;
+  font-size: 21px;
   line-height: 1.6;
+  margin-top: -3%;
   color: #000;
 }
 
@@ -1114,4 +1121,66 @@ h3 {
 #amri{
   margin-top: 2%;
   width: 24%;
+}
+
+
+
+
+.director-container {
+  margin-top: 2%;
+  
+  background-color: #ffffff;
+  border-radius: 15px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 30px;
+  max-width: 400px;
+  width: 100%;
+}
+
+.director-photo-wrapper {
+  overflow: hidden;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.director-photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.director-info {
+  margin-top: 20px;
+}
+
+.director-info h2 {
+  margin: 10px 0 5px 0;
+  font-size: 1.8em;
+  color: #000000;
+}
+
+.director-info p {
+  color: #666;
+  margin: 0;
+  font-size: 1.3em;}
+
+
+
+  .mbalogo {
+    width: 16%;
+}
+#relation{   
+    margin-left: 31%;
+    font-family: 'Brush Script MT', cursive;
+    font-size: 500%;
+    color: #1c7700;
+    margin-top: -14%;
+    width: 100%;
+}
+#abb{
+    margin-top: 7%;
 }
